--- a/task-manager/package.json
+++ b/task-manager/package.json
@@ -17,5 +17,8 @@
     "mongodb": "",
     "mongoose": "^6.7.3",
     "validator": "^13.7.0"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.14"
   }
 }
