--- a/task-manager/package.json
+++ b/task-manager/package.json
@@ -4,7 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon src/index.js"
+    "start": "node src/index.js",
+    "dev": "env-cmd -f ./config/dev.env nodemon src/index.js",
+    "test": "env-cmd -f ./config/test.env jest --watch"
+  },
+  "jest": {
+    "testEnvironment": "node"
   },
   "keywords": [],
   "author": "",
@@ -20,6 +25,10 @@
     "validator": "^13.7.0"
   },
   "devDependencies": {
-    "@types/express": "^4.17.14"
+    "@types/express": "^4.17.14",
+    "env-cmd": "^10.1.0",
+    "jest": "^23.6.0",
+    "nodemon": "^2.0.20",
+    "supertest": "^3.4.1"
   }
 }
